# todomvc-shipyard

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rollup.dev.js  rollup.release.js
.github/workflows/: build.yml
public/: index.html
src/: actions.rs  components.rs  dom.rs  events.rs  lib.rs  setup.rs  storage.rs  systems.rs  templates.rs
src/components/: aliases.rs  standard.rs  tags.rs  uniques.rs
src/dom/: selector.rs
src/events/: handlers.rs  initial.rs  mod.rs
src/systems/: actions.rs  cleanup.rs  debug.rs  maintenance.rs  mod.rs  render.rs  save.rs  setup.rs  todos.rs  workloads.rs
src/systems/actions/: cleanup.rs  mod.rs  todos.rs
src/systems/dom/: bind_events.rs  events.rs  mod.rs  props.rs  tree.rs
src/systems/events/: bind.rs  handlers.rs  mod.rs
src/systems/render/: mod.rs  props.rs  tree.rs
templates/: body.html  footer.html  todo-item.html
wasm/: app.wasm  index.js
