[package]
name = "app"
version = "0.1.0"
description = "App"
authors = ["David Komer <david.komer@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = {version = "0.2.62"}
web-sys = { version = "0.3.39", features = [
    'Document', 
    'DocumentFragment', 
    'HtmlTemplateElement',
    'Window',
    'Location',
    'Element',
    'CssStyleDeclaration',
    'DomTokenList',
    'HtmlCollection',
    'HtmlInputElement',
    'KeyboardEvent',
    'MouseEvent',
] }
js-sys = "0.3.39"
derive_more = { version = "^0.99", default-features = false, features = ["deref", "deref_mut"]}

wasm-logger = { version = "0.2.0", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
awsm_web = { version = "0.2.0", features = ["tick", "loaders"], default-features = false }
futures-signals = "0.3.15"
gloo-events = "0.1.1"
cfg-if = "0.1.10"
log = "0.4.8"
serde = { version = "1.0.106", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"
serde_json = "1.0.52"
futures = "0.3.4"
wasm-bindgen-futures = "0.4.12"
simple-html-template = {version = "0.1.5", features = ["wasm"] }
htmlescape = "^0.3"
# shipyard = { version = "0.4.1", features = ["non_send", "non_sync"], default-features = false }
shipyard = { git = "https://github.com/leudz/shipyard.git", features = ["non_send", "non_sync", "panic", "serde"], default-features = false }

[features]
default = ["wee_alloc"]
release = []
quiet = []
local = ["wasm-logger", "console_error_panic_hook"]
